# BlueHound

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_adcs.json  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ad-security-check.yml  ci.yml
bluehound/api/: server.py
bluehound/cli/: main.py  preflight.py
bluehound/config/: settings.py
bluehound/core/: detection_context.py  graph.py  graph_view.py  indexes.py  types.py
bluehound/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
bluehound/dashboard/src/: App.tsx
bluehound/dashboard/src/api/: client.ts
bluehound/dashboard/src/components/: AttackPathVisualization.tsx  Dashboard.tsx  ErrorBoundary.tsx  FindingsChart.tsx  FindingsTable.tsx  LoadingSpinner.tsx  RiskScoreCard.tsx  TopFixes.tsx
bluehound/dashboard/src/styles/: index.css
bluehound/dashboard/src/types/: index.ts
bluehound/detection/: __init__.py  category_a.py  category_b.py  category_c.py  category_d.py  category_e.py  engine.py  factory.py
bluehound/diff/: engine.py
bluehound/ingestion/: adcs.py  sharphound.py
bluehound/output/: __init__.py  assembler.py
bluehound/risk/: __init__.py  edge_scoring.py  engine.py
docs/: adcs-deep-dive.md  api-reference.md  architecture.md  detection-catalog.md  development.md  user-guide.md
tests/unit/: test_adcs_ingestion.py  test_api_server.py  test_assembler.py  test_category_a.py  test_category_b.py  test_category_c.py  test_category_d.py  test_category_e.py  test_cli.py  test_cli_analyze.py  test_cli_diff.py  test_detection_context.py  test_diff_engine.py  test_edge_scoring.py  test_engine.py  test_factory.py  test_graph.py  test_graph_view.py  test_pipeline.py  test_risk_engine.py  test_sharphound.py  test_types.py
